# ai-qa

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: imports.py  material_reviews.py  materials.py  pages.py  qa.py  templates.py
app/services/: ai_provider.py  distribution_runtime.py  excel_importer.py  material_review.py  material_search.py  media_analysis.py  order_compare.py  prompt_builder.py  quote_search.py  raw_material_seed.py  speech_template.py
app/static/: app.css  app.js
app/templates/: base.html  index.html  knowledge.html  materials.html  speech_templates.html
data/samples/: sample_contracts.xlsx  sample_quotes.xlsx
docs/: development-local-runbook.md  prd-local-sales-ai.md
docs/superpowers/plans/: 2026-07-07-local-sales-ai-mvp.md
raw/: 260706业务员谈单手册_v4.0.docx  4-21日 234 806 726 7474 PI .xlsx  5-27日 255 674 607 960PI.xlsx  报价1.xlsx  报价2.xlsx  报价3.xlsx
scripts/: create_sample_excels.py  import_raw_manual.py
tests/: conftest.py  test_api_flows.py  test_database_models.py  test_distribution_runtime.py  test_excel_importer.py  test_material_review.py  test_material_search.py  test_media_analysis.py  test_order_compare.py  test_prompt_builder.py  test_quote_search.py  test_raw_material_seed.py  test_speech_template.py
